src/graphics/nextRuns/nextRuns.css
.next-runs-container {
  width: 100%;
  height: 100%;

  font-family: 'DaggerSquareOblique';
  letter-spacing: 2px;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  overflow: hidden;

  /*
  background-image: linear-gradient(to bottom, black 90%, transparent);
  */
  mask-image: linear-gradient(to bottom, black 90%, transparent);
  -webkit-mask-image: linear-gradient(to bottom, black 90%, transparent);
}

.next-runs-label {
  color: var(--wasd-white-muted);
  font-size: 30px;
  margin-bottom: 20px;
}

.next-run {
  color: var(--wasd-white);
  margin-bottom: 20px;

  width: 100%;

  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;

  padding: 5px;

  border-radius: 10px;
  border: 2px solid var(--wasd-pink);
}

.next-run-game {
  font-size: 34px;
  margin-bottom: 5px;
}

.next-run-details {
  width: 100%;

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;

  font-size: 26px;
}

